--- a/codefresh.yml
+++ b/codefresh.yml
@@ -1,67 +1,22 @@
 version: '1.0'
 steps:
-  build_step:
-    title: Build
-    type: build
-    dockerfile: Dockerfile
-    image_name: containers101/demochat
-    tag: '${{CF_BRANCH}}'
 
-#  unit_tests:
-#    title: Unit Tests
-#    image: ${{build_step}}
-#    fail_fast: false
-#    working-directory : /usr/src/app
-#    commands:
-#      - npm test
-
-  unit_test:
-    type: composition
-    working_directory: '${{main_clone}}'
-    composition:
-      version: '2'
-      services:
-        mongo:
-          image: 'mongo:latest'
-          ports:
-            - 27017
-    composition_candidates:
-      test:
-        image: '${{build_step}}'
-        command: npm test
-  push_to_registry:
-    title: Push To Registry
-    type: push
-    candidate: ${{build_step}}
-    tag: ${{CF_BRANCH}}
-
-  deploy_to_ecs:
-    title: Deploy Container to ECS
-    image: codefresh/cf-deploy-ecs
+  unit_tests:
+    title: Unit Tests
+    image: alpine:latest
+    fail_fast: false
     commands:
-      - >-
-        cfecs-update --image-name containers101/demochat --image-tag
-        ${{CF_BRANCH}} eu-west-1 demochat-production demochat-service
-    environment:
-      - 'AWS_ACCESS_KEY_ID=${{AWS_ACCESS_KEY_ID}}'
-      - 'AWS_SECRET_ACCESS_KEY=${{AWS_SECRET_ACCESS_KEY}}'
-    when:
-      condition:
-        all:
-          deploy_to_ecs: '"${{DEPLOY_ECS}}" == "true"'
-
-  deploy_to_kubernetes:
-    image: codefresh/cf-deploy-kubernetes
-    tag: latest
-    working_directory: ${{main_clone}}
+      - cf_export SOME=VALUE1
+      - cf_export SOME_KEY=VALUE1
+      - cf_export MY_IMAGE=alpine:latest
+      
+      
+      
+  unit_tests:
+    title: Unit Tests
+    image: ${{MY_IMAGE}}
+    fail_fast: false
     commands:
-      - /cf-deploy-kubernetes deployment.yml
-    environment:
-      - KUBERNETES_USER=${{KUBERNETES_USER}}
-      - KUBERNETES_PASSWORD=${{KUBERNETES_PASSWORD}}
-      - KUBERNETES_SERVER=${{KUBERNETES_SERVER}}
-      - DOCKER_IMAGE_TAG=${{CF_BRANCH}}
-    when:
-      condition:
-        all:
-          deploy_to_kubernetes: '"${{DEPLOY_KUBERNETES}}" == "true"'
+      - echo $SOME
+      - echo $SOME_KEY
+      - echo $CF_BRANCH
