--- a/codefresh.yml
+++ b/codefresh.yml
@@ -12,7 +12,7 @@ steps:
       
       
       
-  unit_tests:
+  unit_testss:
     title: Unit Tests
     image: ${{MY_IMAGE}}
     fail_fast: false
