--- a/codefresh.yml
+++ b/codefresh.yml
@@ -8,7 +8,7 @@ steps:
     commands:
       - cf_export SOME=VALUE1
       - cf_export SOME_KEY=VALUE1
-      - cf_export MY_IMAGE=ubuntu:latest
+      - cf_export MY_IMAGE=alpine:latest
       
       
       
