--- a/codefresh.yml
+++ b/codefresh.yml
@@ -9,6 +9,10 @@ steps:
       - cf_export SOME=VALUE1
       - cf_export SOME_KEY=VALUE1
       - cf_export MY_IMAGE=ubuntu:latest
+    when:
+      condition:
+        all:
+          masterBranch: '"${{CF_BRANCH}}" != "master"'
       
       
       
