--- a/codefresh.yml
+++ b/codefresh.yml
@@ -9,6 +9,7 @@ steps:
       - cf_export SOME=VALUE1
       - cf_export SOME_KEY=VALUE1
       - cf_export MY_IMAGE=ubuntu:latest
+      - cat ${{CF_VOLUME_PATH}}/env_vars_to_export
     when:
       condition:
         all:
