--- a/codefresh.yml
+++ b/codefresh.yml
@@ -19,9 +19,10 @@ steps:
       
   unit_testss:
     title: Unit Tests
-    image: ${{MY_IMAGE}}
+    image: alpine:latest
     fail_fast: false
     commands:
+      - env
       - echo $SOME
       - echo $SOME_KEY
       - echo $CF_BRANCH
