--- a/codefresh.yml
+++ b/codefresh.yml
@@ -7,7 +7,7 @@ steps:
     fail_fast: false
     commands:
       - cf_export SOME=VALUE1
-      - cf_export SOME_KEY=VALUE1
+      - exit 1
       - cf_export MY_IMAGE=ubuntu:latest
       - cat ${{CF_VOLUME_PATH}}/env_vars_to_export
     when:
