--- a/codefresh_vars.yml
+++ b/codefresh_vars.yml
@@ -4,7 +4,7 @@ steps:
   retrieve-git-hash:
     description: retrive git tag
     title: Free styling 2
-    image: ubuntu:latest
+    image: bravissimolabs/alpine-git
     commands:
         - echo $(git rev-parse --short=5 HEAD)
         - export GIT_HASH=$(git rev-parse --short=5 HEAD)
