--- a/codefresh_vars.yml
+++ b/codefresh_vars.yml
@@ -8,7 +8,7 @@ steps:
     commands:
         - echo $(git rev-parse --short=5 HEAD)
         - export GIT_HASH=$(git rev-parse --short=5 HEAD)
-        - cf_export GIT_TAG=$GIT_TAG
+        - cf_export GIT_TAG=$GIT_HASH
   retrieve-git-hash:
     description: retrive git tag
     title: Free styling 2
