--- a/codefresh_vars.yml
+++ b/codefresh_vars.yml
@@ -9,14 +9,12 @@ steps:
         - echo $(git rev-parse --short=5 HEAD)
         - export GIT_HASH=$(git rev-parse --short=5 HEAD)
         - cf_export GIT_TAG=$GIT_HASH
-  retrieve-git-hash:
+  test-git-hash:
     description: retrive git tag
     title: Free styling 2
     image: ubuntu:lastest
     commands:
-        - echo $(git rev-parse --short=5 HEAD)
-        - export GIT_HASH=$(git rev-parse --short=5 HEAD)
-        - cf_export $GIT_TAG
+      - echo $GIT_TAG
   build_step:
     title: Build
     type: build
