--- a/codefresh.yml
+++ b/codefresh.yml
@@ -4,7 +4,7 @@ steps:
     title: Build
     type: build
     dockerfile: Dockerfile
-    image_name: containers101/demochat
+    image_name: demochat
     tag: '${{CF_BRANCH}}'
 
 #  unit_tests:
