--- a/annotation.yml
+++ b/annotation.yml
@@ -3,7 +3,7 @@ steps:
   BuildingDockerImage:
     title: Building Docker Image
     type: build
-    image_name: containers101/demochat
+    image_name: demochat
     working_directory: ./
     dockerfile: Dockerfile
     metadata: # Declare the metadata attribute
