--- a/fullpipeline.yml
+++ b/fullpipeline.yml
@@ -7,8 +7,22 @@ steps:
     working_directory: ./
     dockerfile: Dockerfile
     tag: '${{CF_BRANCH_TAG_NORMALIZED}}'
-    
-  
+  RunningUnitTests:
+    title: Running Unit Tests
+    image: '${{BuildingDockerImage}}'
+    working_directory: IMAGE_WORK_DIR
+    commands: 
+      - bash unit_test.sh
+    on_success:
+      metadata:
+        set:
+          - '${{BuildingDockerImage.imageId}}':
+              - CF_QUALITY: true
+    on_fail:
+      metadata:
+        set:
+          - '${{BuildingDockerImage.imageId}}':
+              - CF_QUALITY: false  
   RunningPerformanceTests:
     title: Running Performance Tests
     type: composition
@@ -42,6 +56,15 @@ steps:
         set:
           - '${{BuildingDockerImage.imageId}}':
               - CF_QUALITY: false
+  add_jira_info:
+    title: Parsing jira Commit
+    image: r.cfcr.io/razielt77_github/containers101/annotator:master
+    command:
+      - bash script.sh
+    working_directory: IMAGE_WORK_DIR
+    environment:
+      - CF_COMMIT_MESSAGE = ${{CF_COMMIT_MESSAGE}}
+      - CF_VOLUME_PATH=${{CF_VOLUME_PATH}}
   export:
     title: "Exporting variables..."
     image: alpine
@@ -56,5 +79,9 @@ steps:
       metadata:
         set:
           - '${{BuildingDockerImage.imageId}}':
+              - Jira: ${{JIRA_URL}}
               - PerformanceReport: ${{PER_LINK}}
-              
+              - PerformanceLatency: ${{PER_LATE}}
+              - UnitCoverage: ${{UNIT_COV}}
+              - Unit: ${{UNIT}}
+            
