--- a/fullpipeline.yml
+++ b/fullpipeline.yml
@@ -45,6 +45,10 @@ steps:
         volumes:
          - '${{CF_VOLUME_NAME}}:/codefresh/volume'
     add_flow_volume_to_composition: true
+    when:
+      condition:
+        all:
+          testresults: '"${{FAIL}}" == "0"' 
     on_success:
       metadata:
         set:
@@ -84,4 +88,24 @@ steps:
               - PerformanceLatency: ${{PER_LATE}}
               - UnitCoverage: ${{UNIT_COV}}
               - Unit: ${{UNIT}}
+  rename_env:
+    title: Run and rename environment
+    type: launch-composition
+    composition: 'full-application'
+    environment_name: '${{CF_REPO_OWNER}}-${{CF_REPO_NAME}}-${{CF_COMMIT_AUTHOR}}'
+    when:
+      condition:
+        all:
+          testresults: '"${{FAIL}}" == "1"'   
+  passfail:
+    title: failed
+    image: alpine
+    commands:
+     - echo "exit ${{FAIL}}"
+     - sh -c "exit ${{FAIL}}"
+    on_fail:
+      metadata:
+        set:
+          - '${{BuildingDockerImage.imageId}}':
+              - CF_QUALITY: false
             
