--- a/helm/demochat/templates/deployment.yaml
+++ b/helm/demochat/templates/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: {{.Release.Name}}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        image: "{{ .Values.repositoryRaw }}:{{ .Values.imageTag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.service.internalPort }}
