--- a/helm/demochat/values.yaml
+++ b/helm/demochat/values.yaml
@@ -4,6 +4,7 @@
 replicaCount: 1
 repositoryRaw: razielt/demochat
 imageTag: helm
+serviceType: NodePort
 image:
   repository: razielt/demochat
   tag: helm
