--- a/helm/demochat/templates/service.yaml
+++ b/helm/demochat/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.serviceType }}
   ports:
   - port: {{ .Values.service.externalPort }}
     protocol: TCP
