--- a/helm/demochat/templates/deployment.yaml
+++ b/helm/demochat/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       {{- end }}    
       containers:
       - name: {{.Release.Name}}
-        image: "{{ .Values.repositoryRaw }}:{{ .Values.imageTag }}"
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.service.internalPort }}
