--- a/helm/demochat/templates/deployment.yaml
+++ b/helm/demochat/templates/deployment.yaml
@@ -11,6 +11,10 @@ spec:
       labels:
         app: {{.Release.Name}}
     spec:
+      {{- if .Values.imagePullSecret }}
+      imagePullSecrets:
+      - name: "{{.Values.imagePullSecret}}"
+      {{- end }}    
       containers:
       - name: {{.Release.Name}}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
