--- a/deploy/demochatChart/templates/service.yaml
+++ b/deploy/demochatChart/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ .Values.service.name}}
   labels:
-    app: {{ template "name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    #app: {{ template "name" . }}
+    #chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    #release: {{ .Release.Name }}
+    #heritage: {{ .Release.Service }}
     sha: {{ .Values.commit.sha }}
     branch: "{{ .Values.commit.branch }}"
-    repo: "{{ .Values.commit.repo }}"
+    #repo: "{{ .Values.commit.repo }}"
 spec:
   type: {{ .Values.service.type }}
   ports:
