--- a/deploy/demochatChart/charts/mongodb/values.yaml
+++ b/deploy/demochatChart/charts/mongodb/values.yaml
@@ -28,7 +28,7 @@ serviceType: ClusterIP
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
 ##
 persistence:
-  enabled: true
+  enabled: false
   ## mongodb data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
