--- a/deploy/demochatChart/templates/test/e2e.spec.yaml
+++ b/deploy/demochatChart/templates/test/e2e.spec.yaml
@@ -9,9 +9,9 @@ spec:
   - name: {{ .Release.Name }}-e2e-test
     image: {{ .Values.test.image}}
     command: ["/bin/sh"]
-    args: ["-c" , 'wget --tries {{.Values.test.tries}} $(echo http://${{ template "demochat" . }}/login) ']
+    #args: ["-c" , 'wget --tries {{.Values.test.tries}} $(echo http://${{ template "demochat" . }}/login) ']
         #["bin/sh"]
-    #args : ["-c", "sleep 10000"]
+    args : ["-c", "sleep 10000"]
         # ["http://{{ .Release.Name }}-demochat/login"]
     imagePullPolicy: {{ .Values.image.pullPolicy }}
     env:
