--- a/deploy/demochatChart/values.yaml
+++ b/deploy/demochatChart/values.yaml
@@ -2,6 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 replicaCount: 1
+chartVersion: "0.0.2"
 appversion: 10
 build : "1"
 test:
