--- a/deploy/demochatChart/templates/service.yaml
+++ b/deploy/demochatChart/templates/service.yaml
@@ -19,4 +19,4 @@ spec:
       name: {{ .Values.service.name }}
   selector:
     app: {{ template "name" . }}
-    release: {{ .Release.Name }}
+    #release: {{ .Release.Name }}
