--- a/helm/demochat/Chart.yaml
+++ b/helm/demochat/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
 description: A Helm chart for Kubernetes
 name: demochat
-version: 0.1.0
+version: 0.2.0
+icon: https://codefresh.io/wp-content/uploads/2018/01/demochat.png
