--- a/fullpipeline.yml
+++ b/fullpipeline.yml
@@ -60,6 +60,47 @@ steps:
         set:
           - '${{BuildingDockerImage.imageId}}':
               - CF_QUALITY: false
+  TwistlockScanImage:
+    title: Running Security Tests
+    type: composition
+    composition:
+      version: '2'
+      services:
+        targetimage:
+          image: ${{build_step}} # Must be the Docker build step name
+          command: sh -c "exit 0"
+          labels:
+            build.image.id: ${{CF_BUILD_ID}} # Provides a lookup for the composition
+    composition_candidates:
+      scan_service:
+        image: codefresh/docker-twistcli:latest # Recommend replacing with current Twistlock Console version
+        environment: # Add only the Environment Variables you need
+          - CODEFRESH_CLI_KEY=${{CODEFRESH_CLI_KEY}} # Required
+          - CONSOLE_HOSTNAME=${{CONSOLE_HOSTNAME}} # Required
+          - CONSOLE_PORT=${{CONSOLE_PORT}} # Required
+          - CONSOLE_USERNAME=${{CONSOLE_USERNAME}} # Required
+          - CONSOLE_PASSWORD=${{CONSOLE_PASSWORD}} # Required
+          - COMPLIANCE_THRESHOLD=${{COMPLIANCE_THRESHOLD}} # Optional Example
+          - VULNERABILITY_THRESHOLD=${{VULNERABILITY_THRESHOLD}} # Optional Example
+          - DETAILS=true
+        command: python /twistlock-cli.py "docker inspect $$(docker inspect $$(docker ps -aqf label=build.image.id=${{CF_BUILD_ID}}) -f {{.Config.Image}}) -f {{.Id}} | sed 's/sha256://g'"
+        depends_on:
+          - targetimage
+        volumes: # Volumes required to run DIND
+          - /var/run/docker.sock:/var/run/docker.sock
+          - /var/lib/docker:/var/lib/docker
+    add_flow_volume_to_composition: true
+    on_success: # Execute only once the step succeeded
+      metadata: # Declare the metadata attribute
+        set: # Specify the set operation
+          - ${{build_step.imageId}}: # Select any number of target images
+            - SECURITY_SCAN: true
+
+    on_fail: # Execute only once the step failed
+      metadata: # Declare the metadata attribute
+        set: # Specify the set operation
+          - ${{build_step.imageId}}: # Select any number of target images
+            - SECURITY_SCAN: false
   add_jira_info:
     title: Parsing jira Commit
     image: r.cfcr.io/razielt77_github/containers101/annotator:master
