--- a/fullpipeline.yml
+++ b/fullpipeline.yml
@@ -67,7 +67,7 @@ steps:
       version: '2'
       services:
         targetimage:
-          image: ${{build_step}} # Must be the Docker build step name
+          image: ${{BuildingDockerImage}} # Must be the Docker build step name
           command: sh -c "exit 0"
           labels:
             build.image.id: ${{CF_BUILD_ID}} # Provides a lookup for the composition
@@ -93,13 +93,13 @@ steps:
     on_success: # Execute only once the step succeeded
       metadata: # Declare the metadata attribute
         set: # Specify the set operation
-          - ${{build_step.imageId}}: # Select any number of target images
+          - ${{BuildingDockerImage.imageId}}: # Select any number of target images
             - SECURITY_SCAN: true
 
     on_fail: # Execute only once the step failed
       metadata: # Declare the metadata attribute
         set: # Specify the set operation
-          - ${{build_step.imageId}}: # Select any number of target images
+          - ${{BuildingDockerImage.imageId}}: # Select any number of target images
             - SECURITY_SCAN: false
   add_jira_info:
     title: Parsing jira Commit
